--- a/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Portfolio.cshtml
@@ -12,21 +12,19 @@
 
         <div class="section-title">
             <h2>Portfolio</h2>
-            <p>
-                Projects completed at Centriq
-            </p>
+
         </div>
 
         <div class="row">
 
-            <!--SQL StoreFront-->
+            <!--Admin-->
 
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
                 <div class="icon-box">
 
-                    <h5>SQL | Database Schema</h5>
+                    <h5>GROUP | Admin Dashboard Intranet Site</h5>
                     <p>
-                        @* <a href="#">#</a> *@
+                        <a href="https://github.com/avillegas1717/AtomicSynergistics.git">avillegas1717/AtomicSynergistics.git</a>
                     </p>
 
                     <!--lightgallery-->
@@ -34,7 +32,7 @@
                         <ul id="lightgallery">
                             <li>
                                 <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/SQLDatabase/SQL1.png">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/AdminDVPro/Admin1.png">
                                     <div class="demo-gallery-poster">
                                         <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
                                     </div>
@@ -44,23 +42,21 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>
-                        Used MSSMS to create a relational database, employing lookup tables to establish relationships between entities. These lookup tables facilitate data integrity by storing common values that can be referenced by foreign keys in other tables, promoting consistency and efficient data management.
-                    </p>
+                    <p>Worked as an engineering team utilizing Agile methodologies to develop an administrative intranet application that allows authorized staff to manage company records. This is a fully responsive MVC site with a relational database from Microsoft SQL Server. </p>
 
-                    <a href="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA">
-                        <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA/image"></">
-                    </a>
+                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
+                    </a> *@
                 </div>
             </div>
-            <!--End SQL StoreFront-->
-            <!--Dungeon-->
+            <!--End Admin-->
+            <!--SAT-->
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
                 <div class="icon-box">
 
-                    <h5>C# | Dungeon Console App</h5>
+                    <h5>TEAM | Scheduling Adminstrative Tool</h5>
                     <p>
-                        <a href="https://github.com/avillegas1717/DungeonApp.git">DungeonApp.git</a>
+                        <a href="https://github.com/avillegas1717/SAT.git">avillegas1717/SAT.git</a>
                     </p>
 
                     <!--lightgallery-->
@@ -68,7 +64,7 @@
                         <ul id="lightgallery">
                             <li>
                                 <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/Dungeon/Dungeon1.png">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/SAT/SAT1.png">
                                     <div class="demo-gallery-poster">
                                         <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
                                     </div>
@@ -78,17 +74,47 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Immersive RPG experience with this console app crafted in C#. Name your character, choose weapons, and face off against randomly selected monsters. Track your health, and aim for the top score in this engaging project that showcases the versatility and functionality of C# for console game development.</p>
+                    <p>Collaborated in paired programming to create a robust .NET Core MVC scheduling administrative tool, seamlessly managing and optimizing resource allocation for efficient task scheduling within the organization.</p>
 
-                    <a href="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g">
-                        <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g/image">
-                    </a>
+                    @* <a href="https://api.badgr.io/public/assertions/Nmx8GZzmQsmt1RwzH2PlsA">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Nmx8GZzmQsmt1RwzH2PlsA/image"></">
+                    </a> *@
                 </div>
             </div>
+            <!--End SAT-->
+            <!--Static Site-->
+            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
+                <div class="icon-box">
 
-            <!--End Dungeon-->
+                    <h5>Front-End | Static Personal Site</h5>
+                    <p>
+                        <a href="https://github.com/avillegas1717/PortfolioSiteV2.git">PortfolioSiteV2.git</a>
+                    </p>
+
+                    <!--lightgallery-->
+                    <div class="demo-gallery">
+                        <ul id="lightgallery">
+                            <li>
+                                <a class="thumbLink" href="javascript:void(0)">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/StaticSite/Static1.png">
+                                    <div class="demo-gallery-poster">
+                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end lightgallery-->
+
+                    <p>Static personal site developed using HTML and CSS consists of web pages with fixed content and layout, devoid of dynamic or interactive elements, showcasing information in a visually structured format.</p>
+
+                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
+                    </a> *@
+                </div>
+            </div>
+            <!--End Static Site-->
             <!--ToDoAPI-->
-
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
                 <div class="icon-box">
 
@@ -117,20 +143,19 @@
 
                     </p>
 
-                    <a href="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg">
-                        <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg/image"></">
-                    </a>
+                    @* <a href="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/tRhbPUliSxqdDzwnkvoTJg/image"></">
+                    </a> *@
                 </div>
             </div>
             <!--End ToDo API-->
-            <!--Static Site-->
-
+            <!--Dungeon-->
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
                 <div class="icon-box">
 
-                    <h5>Front-End | Static Personal Site</h5>
+                    <h5>C# | Dungeon Console App</h5>
                     <p>
-                        <a href="https://github.com/avillegas1717/PortfolioSiteV2.git">PortfolioSiteV2.git</a>
+                        <a href="https://github.com/avillegas1717/DungeonApp.git">DungeonApp.git</a>
                     </p>
 
                     <!--lightgallery-->
@@ -138,7 +163,7 @@
                         <ul id="lightgallery">
                             <li>
                                 <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/StaticSite/Static1.png">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/Dungeon/Dungeon1.png">
                                     <div class="demo-gallery-poster">
                                         <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
                                     </div>
@@ -148,89 +173,21 @@
                     </div>
                     <!--end lightgallery-->
 
-                    <p>Static personal site developed using HTML and CSS consists of web pages with fixed content and layout, devoid of dynamic or interactive elements, showcasing information in a visually structured format.</p>
+                    <p>Immersive RPG experience with this console app crafted in C#. Name your character, choose weapons, and face off against randomly selected monsters. Track your health, and aim for the top score in this engaging project that showcases the versatility and functionality of C# for console game development.</p>
 
-                    <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
-                        <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
-                    </a>
-                </div>
-            </div>
-            <!--End Static Site-->
-            <!--SAT-->
-
-            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box">
-
-                    <h5>TEAM | Scheduling Adminstrative Tool</h5>
-                    <p>
-                        <a href="https://github.com/avillegas1717/SAT.git">avillegas1717/SAT.git</a>
-                    </p>
-
-                    <!--lightgallery-->
-                    <div class="demo-gallery">
-                        <ul id="lightgallery">
-                            <li>
-                                <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/SAT/SAT1.png">
-                                    <div class="demo-gallery-poster">
-                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--end lightgallery-->
-
-                    <p>Collaborated in paired programming to create a robust .NET Core MVC scheduling administrative tool, seamlessly managing and optimizing resource allocation for efficient task scheduling within the organization.</p>
-
-                    <a href="https://api.badgr.io/public/assertions/Nmx8GZzmQsmt1RwzH2PlsA">
-                        <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Nmx8GZzmQsmt1RwzH2PlsA/image"></">
-                    </a>
-                </div>
-            </div>
-            <!--End SAT-->
-            <!--Admin-->
-
-            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box">
-
-                    <h5>GROUP | Admin Dashboard Intranet Site</h5>
-                    <p>
-                        <a href="https://github.com/avillegas1717/AtomicSynergistics.git">avillegas1717/AtomicSynergistics.git</a>
-                    </p>
-
-                    <!--lightgallery-->
-                    <div class="demo-gallery">
-                        <ul id="lightgallery">
-                            <li>
-                                <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/AdminDVPro/Admin1.png">
-                                    <div class="demo-gallery-poster">
-                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--end lightgallery-->
-
-                    <p>Worked as an engineering team utilizing SCRUM methodologies to develop an administrative intranet application that allows authorized staff to manage company records. This is a fully responsive MVC site with a relational database from Microsoft SQL Server. </p>
-
-                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
-                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
+                    @* <a href="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Kr6Pnb-XT2q2Zb5xQZGP8g/image">
                     </a> *@
                 </div>
             </div>
-            <!--End Admin-->
-            <!--React ToDo-->
-
+            <!--End Dungeon-->
+            <!--SQL StoreFront-->
             <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
                 <div class="icon-box">
 
-                    <h5>REACT | To Do App</h5>
+                    <h5>SQL | Database Schema</h5>
                     <p>
-                        <a href="https://github.com/avillegas1717/react_todo.git">avillegas1717/react_todo.git</a>
-                        @* <a href="http://todo.aliciavillegas.net">todo.aliciavillegas.net</a> *@
+                        @* <a href="#">#</a> *@
                     </p>
 
                     <!--lightgallery-->
@@ -238,7 +195,7 @@
                         <ul id="lightgallery">
                             <li>
                                 <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/ReactToDo/ReactToDo1.png">
+                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/SQLDatabase/SQL1.png">
                                     <div class="demo-gallery-poster">
                                         <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
                                     </div>
@@ -248,46 +205,16 @@
                     </div>
                     <!--end lightgallery-->
 
-                    @* <p>Project desscription here</p> *@
-
-                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
-                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
-                    </a> *@
-                </div>
-            </div>
-            <!--End React ToDo-->
-            <!--StoreFront MVC-->
-
-            <div class="col-md-4 d-flex justify-content-evenly align-items-center mt-4">
-                <div class="icon-box">
-
-                    <h5>.NET Core MVC | Store Front Site</h5>
                     <p>
-                        @* <a href="#"></a> *@
+                        Used MSSMS to create a relational database, employing lookup tables to establish relationships between entities. These lookup tables facilitate data integrity by storing common values that can be referenced by foreign keys in other tables, promoting consistency and efficient data management.
                     </p>
 
-                    <!--lightgallery-->
-                    <div class="demo-gallery">
-                        <ul id="lightgallery">
-                            <li>
-                                <a class="thumbLink" href="javascript:void(0)">
-                                    <img class="img-responsive thumb" src="~/img/MyUploads/Portfolio/StoreFrontMVC/StoreFrontMVC1.png">
-                                    <div class="demo-gallery-poster">
-                                        <img src="https://sachinchoolur.github.io/lightgallery.js/static/img/zoom.png">
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--end lightgallery-->
-                    @* <p>Project desscription here</p> *@
-
-                    @* <a href="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w">
-                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/1XXRpCYWSeOfphUYtHh67w/image"></">
+                    @*  <a href="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA">
+                    <img width="60px" height="60px" src="https://api.badgr.io/public/assertions/Krj90speQEmNWX0M20WZMA/image"></">
                     </a> *@
                 </div>
             </div>
-            <!--End StoreFront MVC-->
+            <!--End SQL StoreFront-->
             <!--Uncomment if need more projects-->
             @* <div class="col-md-2 col-md-3 d-flex justify-content-evenly align-items-center mt-4">
             <div class="icon-box">
