--- a/PortfolioMVC.UI.MVC/Views/Home/About.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/About.cshtml
@@ -28,25 +28,19 @@
 
                 <div class="col-md-7 d-flex align-items-center mt-4">
                     <p class="about icon-box text-start">
-                        I am a Full Stack Web Developer attending Centriq to build a strong foundation of programming languages, with a special interest in .NET MVC and SQL. I have a diverse background, with over 15 years in professional photography and retail management.
+
+                        I'm a Full Stack .Net Developer eager to contribute my skills to a forward-thinking development team. 
                         <br />
                         <br />
-                        I thrive in collaborative environments where I can contribute my problem-solving skills and absorb insights and hard skills from more experienced professionals. I am driven by a thirst for knowledge and pushing myself to new limits where I can explore new technologies and create impactful solutions that enhance user experiences.
+                        I am excited to expand my horizons in front-end development, with a keen focus on elevating UX/UI design to meet the highest accessibility standards. I believe that great design is not just visually appealing but also seamlessly functional for all users.
+                        <br />
+                        <br />
+                        My unique background blends over 15 years of experience in professional photography and retail management, bringing a creative edge and a meticulous eye for detail to my development work. This diverse experience has honed my ability to think outside the box and approach problem-solving with a fresh perspective.
                         <br />
                         <br />
                         When I'm not coding you can find me walking dogs around Kansas City, collecting vinyl, or playing with my dogs Gizmo and Wilson.
                         <br />
 
-                        @* I am a Junior Developer who is passionate about crafting clean and efficient code. My journey in software development hasn't been the most traditional route, having spent most of my career as a professional photographer and in retail management. I like to think that my diverse background and experiences will continue to improve throughout my career as I evolve.
-                        <br />
-                        <br />
-                        The bootcamp experience at Centriq has helped build a strong foundation in programming languages such as SQL, ASP.NET MVC, React, JavaScript, C#, and RestfulAPI. With a special interest in .NET MVC and SQL.
-                        <br />
-                        <br />
-                        I am excited to learn and excel in my craft, to develop appealing websites, and to help solve problems for end users and businesses. I thrive in collaborative environments where I can contribute my problem-solving skills and absorb insights and hard skills from more experienced professionals. I am driven by a thirst for knowledge and pushing myself to new limits where I can explore new technologies and create impactful solutions that enhance user experiences.
-                        <br />
-                        <br />
-                        When I'm not coding you can find me walking dogs around Kansas City, collecting vinyl, or playing with my dogs Gizmo and Wilson. *@
                     </p>
                 </div>
             </div>
