--- a/PortfolioMVC.UI.MVC/Views/Home/Contact.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Home/Contact.cshtml
@@ -17,7 +17,7 @@
         <div class="section-title">
             <h2>Contact</h2>
             <p>
-                I am eager to immerse myself in to the world of Web Dev and collaborate. Whether it's a project idea, a question, or just a friendly chat, don't hesitate to reach out.
+                Whether it's a project idea, a question, or just a friendly chat, don't hesitate to reach out.
                 I'm ready to create a brighter digital future, one line of code at a time!
             </p>
 
