--- a/PortfolioMVC.UI.MVC/Views/Shared/OriginalLayout.cshtml.css
+++ b/PortfolioMVC.UI.MVC/Views/Shared/OriginalLayout.cshtml.css
@@ -12,13 +12,13 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
+  color: #F5F5F5;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #F5F5F5;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
