--- a/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioMVC.UI.MVC/Views/Shared/_Layout.cshtml
@@ -65,9 +65,9 @@
                         <li>
                             <a href=@Url.Action("Portfolio", "Home")>Portfolio</a>
                         </li>
-                        <li>
+                     @*    <li>
                             <a href=@Url.Action("Classmates", "Home")>Classmates</a>
-                        </li>
+                        </li> *@
                         <li>
                             <a href=@Url.Action("Contact", "Home")>Contact</a>
                         </li>
@@ -110,7 +110,7 @@
         <footer id="footer" class="fixed-bottom">
 
             <div class="copyright">
-                &copy; Copyright 2023 <strong><span>Alicia Villegas</span></strong>. All Rights Reserved
+                &copy; Copyright <span id="current-year"></span>:<strong> Alicia Villegas</strong>
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
@@ -182,6 +182,12 @@
                 $('#nav-link-container').toggleClass('expanded');
             });
 
+        </script>
+
+        <!-- Copyright Script -->
+        <script>
+            const year = document.querySelector('#current-year')
+            year.innerHTML = new Date().getFullYear()
         </script>
 
 
