--- a/PortfolioMVC.UI.MVC/wwwroot/css/styleCustom.css
+++ b/PortfolioMVC.UI.MVC/wwwroot/css/styleCustom.css
@@ -3,7 +3,7 @@
 # General | **UPDATE STATUS**
 --------------------------------------------------------------*/
 body {
-    background-color: black;
+    background-color: #0A0A0A;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -45,7 +45,7 @@ h6 {
     background-color: rgba(236, 244, 243, 0.043);
     border: 2px solid rgba(247, 243, 243, 0.125);
     padding: 5px;
-    color: #fff;
+    color: #F5F5F5;
     font-family: "sans-serif", monospace;
     font-size: 14px;
     transition: 0.4s;
@@ -73,7 +73,7 @@ h6 {
 .section-title {
     text-align: center;
     padding-bottom: 30px;
-    color: #fff;
+    color: #F5F5F5;
 }
 
     .section-title h2 {
@@ -114,21 +114,21 @@ h6 {
   bottom: 15px;
   z-index: 996;
   background: transparent;
-  color: #fff;
+  color: #F5F5F5;
   width: 40px;
   height: 40px;
-  border-color: #fff;
+  border-color: #F5F5F5;
   border-radius: 50px;
   transition: all 0.4s;
 }
 .back-to-top i {
   font-size: 24px;
-  color: #fff;
+  color: #F5F5F5;
   line-height: 0;
 }
 .back-to-top:hover {
   background: #49cbbb;
-  color: #fff;
+  color: #F5F5F5;
 } 
 .back-to-top.active {
   visibility: visible;
@@ -145,7 +145,7 @@ h6 {
     border-radius: 4px;
     border: 2px solid rgba(247, 243, 243, 0.125);
     padding: 15px 0;
-    color: #fff;
+    color: #F5F5F5;
     font-size: 10px;
     text-align: left;
     font-family: "sans-serif", monospace;
@@ -165,7 +165,7 @@ h6 {
 }
 
     .navbar-social-links a {
-        color: #fff;
+        color: #F5F5F5;
         opacity: 2;
         padding-left: 6px;
         line-height: 0px;
@@ -181,7 +181,7 @@ h6 {
         background-color: rgba(236, 244, 243, 0.043);
         border: 2px solid rgba(247, 243, 243, 0.125);
         padding: 5px;
-        color: #fff;
+        color: #F5F5F5;
         font-family: "sans-serif", monospace;
         font-size: 14px;
         transition: 0.4s;
@@ -221,7 +221,7 @@ h6 {
         font-family: "sans-serif", monospace;
         font-size: 16px;
         font-weight: 600;
-        color: #fff;
+        color: #F5F5F5;
         white-space: nowrap;
         transition: 0.3s;
         position: relative;
@@ -271,7 +271,7 @@ h6 {
         z-index: 99;
         opacity: 0;
         visibility: hidden;
-        background: #fff;
+        background: #F5F5F5;
         box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
         transition: 0.3s;
         border-radius: 4px;
@@ -330,7 +330,7 @@ h6 {
 
 /* Mobile Nav */
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 992px) {
 
     ul#nav-link-container {
         transition: all 0.5s ease-in-out;
@@ -344,7 +344,6 @@ h6 {
     div#nav-container.expanded {
         height: 100vh;
     }
-
 }
 
 /*--------------------------------------------------------------
@@ -361,33 +360,33 @@ h6 {
     }
 
 
-#hero h1 {
-    margin: 0;
-    font-family: sans-serif;
-    font-size: 90px;
-    font-weight: 700;
-    line-height: 56px;
-    color: #fff;
-}
+    #hero h1 {
+        margin: 0;
+        font-family: sans-serif;
+        font-size: 90px;
+        font-weight: 700;
+        line-height: 56px;
+        color: #F5F5F5;
+    }
 
-#hero h2 {
-    color: #40e1cf;
-    margin: 10px 0 0 0;
-    font-size: 30px;
-}
+    #hero h2 {
+        color: #34b7a7;
+        margin: 10px 0 0 0;
+        font-size: 30px;
+    }
 
-#hero h3 {
-    color: #cb56ee;
-    margin: 10px 0 0 0;
-    font-size: 32px;
-}
+    #hero h3 {
+        color: #cb56ee;
+        margin: 10px 0 0 0;
+        font-size: 32px;
+    }
 
-#hero h4 {
-    color: #fff;
-    margin: 10px 0 0 0;
-    font-size: 20px;
-    font-family: monospace;
-}
+    #hero h4 {
+        color: #F5F5F5;
+        margin: 10px 0 0 0;
+        font-size: 20px;
+        font-family: monospace;
+    }
 
 @media (min-width: 1024px) {
     #hero {
@@ -398,7 +397,7 @@ h6 {
 @media (max-width: 992px) {
     #hero:before {
         content: "";
-/*        background: rgba(255, 255, 255, 0.8);*/
+        /*        background: rgba(255, 255, 255, 0.8);*/
         position: absolute;
         bottom: 0;
         top: 0;
@@ -409,21 +408,25 @@ h6 {
     #hero h1 {
         font-size: 28px;
         line-height: 36px;
+        color: #F5F5F5;
     }
 
     #hero h2 {
         font-size: 18px;
         line-height: 24px;
+        color: #F5F5F5;
     }
 
     #hero h3 {
         font-size: 18px;
         line-height: 24px;
+        color: #F5F5F5;
     }
 
     #hero h4 {
         font-size: 18px;
         line-height: 24px;
+        color: #F5F5F5;
     }
 }
 
@@ -445,19 +448,18 @@ h6 {
     border: 2px solid rgba(247, 243, 243, 0.125);
     padding: 60px 20px;
     transition: all ease-in-out 0.3s;
-
 }
 
 .about p {
     font-family: monospace;
     font-size: 18px;
-    color: #fff;
+    color: #F5F5F5;
 }
 
 /*.about .icon-box jokeBox {
     font-family: monospace;
     font-size: 14px;
-    color: #fff;
+    color: #F5F5F5;
 }*/
 
 
@@ -481,7 +483,7 @@ h6 {
         font-weight: 550;
         margin: 10px 0 15px 0;
         font-size: 22px;
-        color: #fff;
+        color: #F5F5F5;
     }
 
 .classmates a {
@@ -521,8 +523,7 @@ h6 {
     .portfolio .icon-box p {
         font-family: monospace;
         font-size: 14px;
-        color: #fff;
-        
+        color: #F5F5F5;
     }
 
 .portfolio a {
@@ -587,14 +588,14 @@ h6 {
 }
 
 .btn-primary:hover {
-    background-color: #fff;
+    background-color: #F5F5F5;
     color: #152836;
 }
 
 .btn-primary {
     background-color: #152836;
     border-color: #0e1a24;
-    color: #ffffff;
+    color: #F5F5F5;
 }
 
 .btn-primary {
@@ -606,7 +607,7 @@ h6 {
 .page-head h1 {
     font-size: 42px;
     margin: 0 0 20px;
-    color: #FFF;
+    color: #F5F5F5;
     position: relative;
     display: inline-block;
 }
@@ -773,7 +774,7 @@ h6 {
 }
 
     #lightbox-container p {
-        color: #fff;
+        color: #F5F5F5;
     }
 
 #lightbox-content img {
@@ -798,13 +799,13 @@ h6 {
         box-shadow: none;
         font-size: 14px;
         font-family: "sans-serif", monospace;
-        color: #fff;
+        color: #F5F5F5;
     }
 
     /* FIGURE THIS OUT */
     .contact .php-email-form .error-message {
         display: none;
-        color: #fff;
+        color: #F5F5F5;
         background: #cb56ee;
         text-align: center;
         padding: 15px;
@@ -813,7 +814,7 @@ h6 {
 
     .contact .php-email-form .sent-message {
         display: none;
-        color: #fff;
+        color: #F5F5F5;
         background: #34b7a7;
         text-align: center;
         padding: 15px;
@@ -822,7 +823,7 @@ h6 {
 
     .contact .php-email-form .loading {
         display: none;
-        background: #fff;
+        background: #F5F5F5;
         text-align: center;
         padding: 15px;
     }
@@ -844,7 +845,7 @@ h6 {
     .contact .php-email-form input::placeholder,
     .contact .php-email-form textarea,
     .contact .php-email-form textarea::placeholder {
-        color: #fff;
+        color: #F5F5F5;
         background-color: black;
     }
 
@@ -866,7 +867,7 @@ h6 {
         background-color: rgba(236, 244, 243, 0.043);
         border: 2px solid rgba(247, 243, 243, 0.125);
         padding: 5px;
-        color: #fff;
+        color: #F5F5F5;
         font-family: "sans-serif", monospace;
         font-size: 14px;
         transition: 0.4s;
@@ -912,7 +913,7 @@ h6 {
 .emailConf p {
     font-family: monospace;
     font-size: 16px;
-    color: #fff;
+    color: #F5F5F5;
     text-align: center;
 }
 
@@ -929,7 +930,7 @@ h6 {
     border-radius: 4px;
     border: 2px solid rgba(247, 243, 243, 0.125);
     padding: 10px 30px;
-    color: #fff;
+    color: #F5F5F5;
     font-size: 10px;
     text-align: left;
     font-family: "sans-serif", monospace;
@@ -939,6 +940,10 @@ h6 {
         color: #cb56ee;
     }
 
-    #footer .copyright strong {
+    #footer #current-year {
+        color: #f5f5f5;
+    }
+
+    #footer .copyright strong{
         color: #34b7a7;
     }
